style.css
/* ... */
.desktop .div {
  justify-content: center;
  margin-top: -1px;
  font-family: var(--body-sb16-font-family);
  font-weight: var(--body-sb16-font-weight);
  color: var(--grayscale-500);
  font-size: var(--body-sb16-font-size);
  text-align: center;
  line-height: var(--body-sb16-line-height);
  position: relative;
  display: flex;
  align-items: center;
  width: fit-content;
  letter-spacing: var(--body-sb16-letter-spacing);
  white-space: nowrap;
  font-style: var(--body-sb16-font-style);
}

.desktop .btn-language {
  justify-content: flex-end;
  gap: 22px;
  display: inline-flex;
  align-items: center;
  position: relative;
  flex: 0 0 auto;
}

.desktop .div-wrapper {
  all: unset;
  box-sizing: border-box;
  height: 54px;
  justify-content: center;
  gap: 10px;
  padding: 16px 0px;
  display: inline-flex;
  align-items: center;
  position: relative;
  flex: 0 0 auto;
}

.desktop .text-wrapper-2 {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  font-family: var(--body-m14-font-family);
  font-weight: var(--body-m14-font-weight);
  color: var(--grayscalewhite);
  font-size: var(--body-m14-font-size);
  text-align: center;
  letter-spacing: var(--body-m14-letter-spacing);
  line-height: var(--body-m14-line-height);
  font-style: var(--body-m14-font-style);
}

.desktop .text-wrapper-3 {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: fit-content;
  font-family: var(--body-m14-font-family);
  font-weight: var(--body-m14-font-weight);
  color: var(--grayscale-500);
  font-size: var(--body-m14-font-size);
  text-align: center;
  letter-spacing: var(--body-m14-letter-spacing);
  line-height: var(--body-m14-line-height);
  font-style: var(--body-m14-font-style);
}

.desktop .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 70px;
  padding: 76px 0px;
  min-height: calc(100vh - 68px);
  position: relative;
  align-self: stretch;
  width: 100%;
  background-color: #0e0e0e;
}

.desktop .text {
  display: flex;
  flex-direction: column;
  width: 620px;
  align-items: center;
  gap: 30px;
  position: relative;
  flex: 0 0 auto;
}

.desktop .p {
  align-self: stretch;
  margin-top: -1px;
  font-family: var(--main-font-family);
  font-weight: var(--main-font-weight);
  font-size: var(--main-font-size);
  line-height: var(--main-line-height);
  position: relative;
  color: var(--color-grayscale-white);
  text-align: center;
  letter-spacing: var(--main-letter-spacing);
  font-style: var(--main-font-style);
}

.desktop .text-wrapper-4 {
  width: fit-content;
  font-family: var(--body-r16-font-family);
  font-weight: var(--body-r16-font-weight);
  color: var(--grayscale-200);
  font-size: var(--body-r16-font-size);
  text-align: center;
  line-height: var(--body-r16-line-height);
  position: relative;
  letter-spacing: var(--body-r16-letter-spacing);
  font-style: var(--body-r16-font-style);
}

.desktop .icons {
  display: inline-flex;
  align-items: center;
  gap: 14px;
  position: relative;
  flex: 0 0 auto;
}

.desktop .vector-wrapper {
  position: relative;
  width: 30px;
  height: 30px;
  background-color: var(--grayscale-800);
  border-radius: 6px;
}

.desktop .vector {
  position: absolute;
  top: calc(50.00% - 9px);
  left: calc(50.00% - 10px);
  width: 19px;
  height: 17px;
}

.desktop .vector-2 {
  position: absolute;
  top: calc(50.00% - 9px);
  left: calc(50.00% - 7px);
  width: 15px;
  height: 17px;
}

.desktop .card-list {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 20px;
  position: relative;
  align-self: stretch;
  width: 100%;
  flex: 0 0 auto;
}

.desktop .card {
  position: relative;
  width: 286px;
  height: 402.09px;
  background-color: var(--grayscale-900);
  border-radius: 12.66px;
  overflow: hidden;
  border: 1.06px solid;
  border-color: var(--grayscale-700);
  opacity: 0.6;
}

.desktop .image {
  position: absolute;
  top: 0;
  left: 0;
  width: 286px;
  height: 402px;
  aspect-ratio: 0.71;
  object-fit: cover;
}

.desktop .text-wrapper-5 {
  position: absolute;
  top: 302px;
  left: 110px;
  height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: 'Pretendard', sans-serif;
  font-weight: 700;
  color: var(--color-grayscale-white);
  font-size: 25.3px;
  text-align: center;
  letter-spacing: 0;
  line-height: 30.4px;
  white-space: nowrap;
}

.desktop .card-2 {
  position: relative;
  width: 286px;
  height: 402.09px;
  background-color: var(--grayscale-900);
  border-radius: 12.66px;
  overflow: hidden;
  border: 1.06px solid;
  border-color: var(--grayscale-700);
}

.desktop .star {
  position: absolute;
  top: calc(50.00% - 102px);
  left: calc(50.00% - 68px);
  width: 135px;
  height: 135px;
}

.desktop .text-wrapper-6 {
  position: absolute;
  top: 298px;
  left: 107px;
  height: 39px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-shadow: 0px 0px 8px #00000040;
  font-family: var(--title-b28-font-family);
  font-weight: var(--title-b28-font-weight);
  color: var(--color-grayscale-white);
  font-size: var(--title-b28-font-size);
  text-align: center;
  letter-spacing: var(--title-b28-letter-spacing);
  line-height: var(--title-b28-line-height);
  white-space: nowrap;
  font-style: var(--title-b28-font-style);
}

.desktop .image-2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 286px;
  height: 402px;
  aspect-ratio: 0.71;
}

.desktop .star-2 {
  position: absolute;
  top: calc(50.00% - 102px);
  left: calc(50.00% - 67px);
  width: 133px;
  height: 131px;
  aspect-ratio: 1;
}
/* ... */

